c4prj2_input/grade.txt
Grading at Mon Nov 26 06:03:50 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘getHand’:
input.c:19:18: error: ‘n’ undeclared (first use in this function)
       char str_n[n];
                  ^
input.c:19:18: note: each undeclared identifier is reported only once for each function it appears in
input.c:19:12: error: unused variable ‘str_n’ [-Werror=unused-variable]
       char str_n[n];
            ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
